--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
 
 #socialBox {
     color: white;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
-    margin-top: -1em;
+    margin-top: -.5em;
 }
 
 #twitch {
@@ -278,7 +278,23 @@ a:link {
     box-shadow: 0 0 30px #C79C6E;
 }
 
+#cll {
+    color: #ffcc00;
+    font-size: 2.5em;
+    width: 100vw;
+    text-align: center;
+    word-spacing: .3em;
+    margin-top: -1em;
+    font-weight: 900;
+    letter-spacing: .5em;
+}
+
 @media only screen and (min-device-width: 330px) and (max-device-width: 480px) {
+    #cll {
+        font-size: 4em;
+        word-spacing: 0em;
+        letter-spacing: .25em;
+    }
     .classLogo {
         min-width: 200px;
         min-height: 200px;
@@ -316,6 +332,13 @@ a:link {
     #classBar {
         width: 90vw;
         margin-left: 5vw;
+    }
+    #socialBox {
+        color: white;
+        font-size: 2.5em;
+        text-align: center;
+        margin-top: -.5em;
+        font-weight: 1300;
     }
     #druidLogo:hover {
         -webkit-box-shadow: 0 0 100px #FF7D0A;
