--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.tooltip {
+    top: 0;
+}
+
 * {
     font-family: 'Roboto', sans-serif;
 }
@@ -385,4 +389,8 @@ a:link {
         -moz-box-shadow: 0 0 100px#C79C6E;
         box-shadow: 0 0 100px #C79C6E;
     }
+}
+
+.tooltip {
+    top: 0;
 }
